Logbook Changelog
=================

Unreleased
----------

- Dropped support for Python 3.7

Version 1.6.0
-------------

Released on July 30th, 2023

- Dropped support for Python 2.7, 3.5, and 3.6.
- Uses pyproject.toml based build.
- Added nteventlog extra for NTEventLogHandler.
- Supports SQLAlchemy 1.4 and 2.0.
- Fix various deprecation warnings.
- exc_info arg may be a BaseException instance (thanks Mattijs Ugen)
- FileHandler supports path-like objects.
- Fixed bug which prevented compilation on Cython 3
- Wheels are generated for more platforms and architectures

Version 1.5.3
-------------

Released on October 16th, 2019

- Fixed deprecated imports from collections module.

Version 1.5.2
-------------

Released on August 21st, 2019

- No changes

Version 1.5.1
-------------

Released on August 20th, 2019

- Added support for asyncio and contextvars

Version 1.4.3
-------------

Released on January 16th, 2019

- Fixed Pypi release for 1.4.2

Version 1.4.2
-------------

Released on December 11th, 2018

- Use correct record delimiters (null for UNIX, newline for network) in SyslogHandler (thanks Jonathan Kamens)
- Try to reconnect to SyslogHandler TCP sockets when they are disconnected (thanks Jonathan Kamens)
- Use RFC 5424 format for networking logging in SyslogHandler (thanks Jonathan Kamens)

Here you can see the full list of changes between each Logbook release.

Version 1.4.1
-------------

Released on October 14th, 2018

- Fixed deprecated regular expression pattern (thanks Tsuyoshi Hombashi)
- Fixed TimedRotatingFileHandler rotation (thanks Tucker Beck)

Version 1.4.0
-------------

Released on May 15th, 2018

- Added support for checking if trace logs have been emitted in TestHandler (thanks @thedrow)


Version 1.3.0
-------------

Released on March 5th, 2018

- Added support for controlling rotating file names -- Logbook now allows users to customize the formatting of rollover/rotating files (thanks Tucker Beck)

Version 1.2.0
-------------
