@@ -5,6 +5,8 @@ Unreleased
 ----------
 
 - Dropped support for Python 3.7
+- Passing (keyfile, certfile) to MailHandler's `secure` argument is deprecated
+  in favour of passing an ssl.SSLContext.
 
 Version 1.6.0
 -------------
